# MessageLogger

./: .gitignore  CMakeLists.txt
include/: library.h
src/: library.cpp
